--- a/proyectos/biblioteca.html
+++ b/proyectos/biblioteca.html
@@ -1,5 +1,5 @@
 <!--20/02/2022-->
-<!--Como parte de mis servicios de manufactura en colaboración con mi socio, diseñamos, cortamos, pintamos e instalamos una librería para una iglesia cercana a nuestra a nuestro taller-->
+<!--Como parte de mis servicios de manufactura en colaboración con mi socio, diseñamos, cortamos, pintamos e instalamos una librería para una iglesia cercana a nuestra a nuestro taller.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
