--- a/proyectos/e-bike.html
+++ b/proyectos/e-bike.html
@@ -1,5 +1,5 @@
 <!--10/10/2021-->
-<!--Una bicicleta eléctrica controlada por una cadena externa por tres motores de alta tecnología para viajar sin pedalear-->
+<!--Una bicicleta eléctrica controlada por una cadena externa por tres motores de alta tecnología para viajar sin pedalear.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
