--- a/proyectos/eggcnc.html
+++ b/proyectos/eggcnc.html
@@ -1,4 +1,5 @@
 <!--05/09/2020-->
+<!--Mi primer CNC, el más económico y sencillo para aprender como funciona el control numérico y a su vez poder obtener resultados reales al pintar huevos.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,7 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/eggcnc_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Siempre me encantaron los CNC's son máquinas que encuentro fascinantes por su presición, velocidad y variedad, pero tan bellas obras de arte están asociadas a costes muy altos por lo que no me puedo permitir una, sin embargo, puedo entenderlas abstrayendo su funcionamiento a una máquina más económica.</p><br><p>Con este pensamiento es que nace la idea de crear el CNC más económico posible y buscando por internet encontré que existía algo llamado "eggbot", una máquina que puede pintar sobre superficies curvas y es controlada por instrucciones de CNC.</p><br><p>Dada esta gran noticia simplemente tuve que descargar el diseño en 3D existente y hacer pequeñas modificaciones para los componentes que iba a usar.</p><br><p>Una vez armado encontré muchos problemas para hacerlo funcionar debido a mi bajo conocimiento sobre programación para el momento por lo que tuve que optar por usar un software de propósito general para cualquier CNC de tres ejes y simplemente ajustar mis dibujos para que no salieran distorsionados debido a la superficie curva.</p>
                         <img src="../images/eggcnc_profile.jpg">
                     </div>
                 </div>
