--- a/proyectos/evolution-up.html
+++ b/proyectos/evolution-up.html
@@ -1,4 +1,5 @@
 <!--23/07/2021-->
+<!--Una organización sin fines de lucro que busca difundir la ciencia y la tecnología de la mayor cantidad de formas posibles.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,9 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/evolution-up_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Una organización sin fines de lucro que fundé con mi socio Erick García con el propósito de buscar formas de difundir la ciencia y la tecnología, a partir de esta organización nació la idea de fungir como patrocinadores de equipos de robótica para manufacturar sus piezas sin ningún costo y así fomentar el desarrollo tecnológico de equipos con poca capacidad de mecanización.</p><br><p>Además del apoyo a estos equipos hacemos voluntariado para ayudar a sectores marginados de la población por medio de apoyo en donaciones y/o cursos para que encuentren oportunidades de salir adelante usando la ciencia y la tecnología como herramienta.</p><br><p>Actualmente estamos trabajando en crear un plan de estudios para abrir una escuela de robótica que pueda participar en las competencias de FIRST (una de las competencias más famosas de robótica a nivel mundial) y que está planeada para empezar a competir en la temporada del 2024.</p>
                         <img src="../images/evolution-up_profile.jpg">
                     </div>
                 </div>
