--- a/proyectos/filtros-3D.html
+++ b/proyectos/filtros-3D.html
@@ -1,4 +1,5 @@
 <!--12/04/2020-->
+<!--Un cubrebocas con filtros intercambiables y diseño personalizado como medio de protección con la llegada de la pandemia.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,9 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/filtros-3D_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Con la llegada de la pandemia busqué formas de fomentar el cuidado frente a lo desconocido del virus, una de mis ideas fue crear cubrebocas más atractivos que los cubrebocas azules disponibles en el momento y por ello diseñé una mascarilla con filtros intercambiables, su propósito principal en comparación con los cubrebocas más económicos era que podía ser reutilizada y además contaría con diseños intercambiables en una tapa frontal para darte un estilo único.</p><br><p>Esta mascarilla fue mi principal medio de protección durante la pandemia hasta que llegaron los cubrebocas del estilo KN95 y derivados que ya eran lavables y se podían conseguir en distintos colores y diseños.</p><br><p>Esta mascarilla fue una de las muchas propuestas de solución que en colaboración con mi equipo de robótica liberamos al internet para que se pudieran fabricar por cualquier persona. El reporte que se hizo puede ser encontrado en el siguiente <a href="https://blog.tecmilenio.mx/propositivo/wint-y-dow-por-el-bienestar-de-la-comunidad" target="_blank">enlace.</a></p>
                         <img src="../images/filtros-3D_profile.jpg">
                     </div>
                 </div>
