--- a/proyectos/first-2019-1.html
+++ b/proyectos/first-2019-1.html
@@ -1,4 +1,5 @@
 <!--10/09/2018-->
+<!--El primer robot que construí para la competencia de robotica FTC (FIRST Tech Challenge) cuyo propósito era tomar cubos y pelotas para colocarlos en una estación a gran altura.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,16 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/first-2019-1_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Este fue el primer robot que construí para la competencia de robótica FTC (FIRST Tech Challenge) el reto de ese año fue llamado "rover rockus" y consistía en recoger objetos del suelo que podían ser pelotas o cubos y debían ser colocados dentro de una nave ubicada en el centro de la cancha a una altura de almenos dos veces la altura original del robot.</p><br><p>Este robot no poseía características muy interesantes ya que era mi primera interacción con muchos de los componentes, pero dentro de sus limitadas capacidades estaban:</p>
+                        <ul>
+                            <li>Llantas mecanum para moverse en todas las direcciones.</li>
+                            <li>Brazo con gran reducción de engranajes para facilitar el control manual.</li>
+                            <li>Intake hecho con ligas para adaptabilidad a los diferentes elementos de juego.</li>
+                            <li>Segundo motor para colgar el robot y no forzar los delgados engranes del brazo.</li>
+                        </ul>
+                        <p>Este robot pasó a la eliminatoria nacional por un premio de diseño y llegó hasta las semifinales.</p>
                         <img src="../images/first-2019-1_profile.jpg">
                     </div>
                 </div>
