--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -1,4 +1,5 @@
 <!--19/07/2019-->
+<!--Go Kart eléctrico hecho a base de tubos de PVC como medio de difusión de la ciencia y la tecnología a todos los rincones de México.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -26,7 +27,7 @@
                             <li>Control por pedal.</li>
                             <li>Claxon.</li>
                         </ul>
-                        <p>Este proyecto debido a su caracter tecnológico-social fue premiado por la compañía "DOW chemical" como el mejor proyecto de latinoamérica del 2019 y me dio la oportunidad de viajar a <a href="./kenia">Kenia</a> a realizar un voluntariado con los otros 27 ganadores de este concurso alrededor del mundo.</p>
+                        <p>Este proyecto debido a su caracter tecnológico-social fue premiado por la compañía "DOW chemical" como el mejor proyecto de latinoamérica del 2019 y me dio la oportunidad de viajar a <a href="./kenia" target="_blank">Kenia</a> a realizar un voluntariado con los otros 27 ganadores de este concurso alrededor del mundo.</p>
                         <img src="../images/e-gokart_profile.jpg">
                     </div>
                 </div>
