--- a/proyectos/estabilizador.html
+++ b/proyectos/estabilizador.html
@@ -1,4 +1,5 @@
 <!--11/07/2021-->
+<!--Un dispositivo electrónico que busca replicar el estabilizador para celulares de la empresa DJI por un precio notablemente menor.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,7 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/estabilizador_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Con mi canal de youtube me planteé grabar videos sobre la elaboración de mis proyectos y un estabilizador de videos es una herramienta indispensable para ese propósito, el problema con el que me enfrenté al tratar de adquirir uno fueron sus altos costos, por ello opté por hacerlo yo mismo.</p><br><p>Con un poco de diseño en SolidWorks creé el mango para sostenerlo y los componentes móviles, la meta de este dispositivo hecho en casa era lograr mantener el teléfono en una orientación ya sea completamente horizontal o vertical sin importar cuanto se mueva mi mano, para hacer eso dos motores paso a paso estaban conectados para inclinar el teléfono de izquierda a derecha y de arriba a abajo. La forma de saber cuantos grados debían rotar estos motores era por medio de un acelerómetro colocado de manera paralela a la parte superior de mi mano al sostener el dispositivo, de esa forma los ángulos de inclinación de la mano se podían compensar con los ángulos de inclinación de los motores.</p><br><p>Como un extra decidí añadir un joystick para cambiar hacía dónde apunta el teléfono por defecto y conseguir estabilización en diferentes ángulos. Además con este joystick sería posible cambiar la orientación de vertical a horizontal y hacer uso de un tercer motor de paneo para rotar el teléfono con un grado más de libertad.</p><br><p>El proceso de diseño, construcción y programación puede ser encontrado en el siguiente <a href="https://www.youtube.com/watch?v=ImAfn5dD8ew" target="_blank">enlace.</a></p>
                         <img src="../images/estabilizador_profile.jpg">
                     </div>
                 </div>
