--- a/proyectos/first-2019-2.html
+++ b/proyectos/first-2019-2.html
@@ -1,5 +1,5 @@
 <!--07/01/2019-->
-<!---->
+<!--Este fue el segundo robot que construí, era un robot completamente diferente al primero ya que medía más de un metro de altura y pesaba 50 kilogramos, este robot representó a México en el campeonato mundial en Houston, Texas.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -20,7 +20,10 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/first-2019-2_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Este fue el primer robot de mayor tamaño en el que me involucré, su tarea era tomar discos y pelotas y colocarlos en naves espaciales a diferentes alturas, la operación del mismo era muy sencilla debido a la poca experiencia del equipo.</p><br>
+                        <p>Se usaba un apéndice de metal pasivo unido a un elevador el cual permitía introducir y bloquear por gravedad el disco para poder colocarlo en la nave espacial, de igual forma el elevador estaba unido a un set de llantas flexibles capaces de succionar las pelotas y elevarlas para colocarlas a las diferentes alturas de la nave espacial.</p><br>
+                        <p>El robot ofrecía movilidad por el campo de juego por medio de un chasis diferencial de 6 llantas de tracción que permitía movimientos hacia adelante, atras y rotaciones sobre su propio eje en ambos sentidos.</p><br>
+                        <p>El objetivo final de este robot era escalar una plataforma de 60cm de altura y esto se lograba usando una elevador lineal accionado por un tornillo sin fin que se extendía hacia el suelo del robot y lo levantaba, posteriormente un elevador lineal horizontal en el suelo deslizaba al robot para pasar de solo estar flotando a descansar completamente en la plataforma donde debía escalar.</p>
                         <img src="../images/first-2019-2_profile.jpg">
                     </div>
                 </div>
