--- a/proyectos/first-2021-1.html
+++ b/proyectos/first-2021-1.html
@@ -1,4 +1,5 @@
 <!--07/09/2020-->
+<!--Este robot lo diseñé durante la pandemia, se planeaba que toda la cancelación de eventos terminara pronto y pudieramos competir con este nuevo robot, ya que esto no fue posible, el robot quedó como un concepto y una gran experiencia de aprendizaje para mi.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,20 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/first-2021-1_profile.jpg">
-                        <p align="justify"><a href="../resources/FTC Tech Brochure 2021.pdf" target="_blank">Folleto Técnico</a></p>
+                        <p>Este robot lo diseñé durante septiembre del 2020, para estas fechas teníamos pensado que el tema de la pandemia se solucionaría para finales de año y en enero podríamos competir, de esa forma nace la idea de sin importar los tiempos inciertos crear un diseño que resolviera la problemática de ese año, evidentemente las cosas no se solucionaron para ese entonces y este robot quedó como un simple concepto pero una muy buena experiencia de diseño mecánico.</p><br>
+                        <p>Las características que hubieran hecho a este robot único son:</p>
+                        <ul>
+                            <li>Chasis con llantas mecanum para mover el robot en todas las direcciones.</li>
+                            <li>Intake dentro del robot con un rodillo de llantas flexibles para recoger discos del suelo.</li>
+                            <li>Banda transportadora para desplazar los discos desde el intake hasta un contenedor dónde se apilarían 3 de ellos.</li>
+                            <li>Contenedor con elevador lineal para subir los discos desde su punto mínimo hasta la altura del disparador.</li>
+                            <li>Servomotor que actuaría como patada para empujar los discos desde su posición en el elevador hasta el disparador.</li>
+                            <li>Disparador con una serie de 3 llantas a altas revoluciones y dos motores para acelerar los discos lo suficiente y poder disparar desde cualquier rincón de la cancha.</li>
+                            <li>Ángulo ajustable para orientar la superestructura del disparador en todo el rango de ángulos necesarios.</li>
+                            <li>Brazo con 2 grados de libertad unido a un elevador para tomar un tubo con base semicircular y sacarlo de la cancha para obtener más puntos.</li>
+                            <li>Soporte movil para el celular que controla el robot y sirve como cámara para visualizar el entorno.</li>
+                        </ul>
+                        <p>Para este robot realicé un <a href="../resources/FTC Tech Brochure 2021.pdf" target="_blank">folleto técnico</a> que describe de mejor manera y visualmente cada parte del robot.</p>
                         <img src="../images/first-2021-1_profile.jpg">
                     </div>
                 </div>
