--- a/proyectos/first-2021-2.html
+++ b/proyectos/first-2021-2.html
@@ -1,4 +1,5 @@
 <!--20/11/2020-->
+<!--A inicios del año 2021 debía iniciar el nuevo reto de FRC pero debido a la pandemia era sabido que se iba a repetir el del año pasado, por ello opté por diseñar un concepto de robot mucho más eficiente que el anterior.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,22 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/first-2021-2_profile.jpg">
-                        <p align="justify"><a href="../resources/FRC Tech Brochure 2021.pdf" target="_blank">Folleto Técnico</a></p>
+                        <p>Debido a la pandemia era sabido que para la competencia de robótica FRC 2021 se repitiría el reto del año pasado ya que la mayoría de equipos ni siquiera tuvo la oportunidad de competir, con esto en mente y esperando que la pandemia terminara diseñé un robot con mucha más producción que en años anteriores y tomé inspiración de equipos que logré ver competir antes de que se cancelaran los eventos del 2020.</p><br>
+                        <p>Si bien este robot nunca llegó a ser construido porque como ya se sabe la pandemia no terminó para esa fecha, este robot hubiera contado con las siguientes características:</p>
+                        <ul>
+                            <li>Chasis diferencial de 6 llantas de tracción.</li>
+                            <li>Doble intake para recoger pelotas de dos lados.</li>
+                            <li>Indexador por gravedad y rodillos en el suelo.</li>
+                            <li>Pre-disparador para acelerar las pelotas antes de llegar al disparador.</li>
+                            <li>Disparador con dos motores Falcon y llantas tanto arriba como abajo con la misma velocidad tangencial.</li>
+                            <li>Ángulo ajustable por dos servomotores.</li>
+                            <li>Cámara "limelight" para el ajuste automático del disparo.</li>
+                            <li>Torreta unida al disparador para ajustar el disparo a cualquier ángulo.</li>
+                            <li>Elevador retraible para mantener el robot pequeño.</li>
+                            <li>Deslizador en la parte superior del elevador para balancearlo en la plataforma de la colgada.</li>
+                            <li>Llantas con sensor de color retraibles para obtener más puntos al girar un disco de colores a una posición específica.</li>
+                        </ul>
+                        <p>Para este robot realicé un <a href="../resources/FRC Tech Brochure 2021.pdf" target="_blank">folleto técnico</a> que describe de mejor manera y visualmente cada parte del robot.</p>
                         <img src="../images/first-2021-2_profile.jpg">
                     </div>
                 </div>
