--- a/proyectos/first-2021-3.html
+++ b/proyectos/first-2021-3.html
@@ -1,4 +1,5 @@
 <!--05/01/2021-->
+<!--Debido a que no se veía una fecha tentativa para el término de la pandemia, FIRST optó por hacer un "reto en casa" dónde se competiría en ciertos circuitos y ganarían aquellos robots con los menores tiempos.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,18 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/first-2021-3_profile.jpg">
-                        <p align="justify"><a href="../resources/FRC Flyer 2021.pdf" target="_blank">Flyer</a></p>
+                        <p>Debido al incremento de casos de COVID-19 durante inicios del 2021, FIRST optó por cancelar la temporada ese año pero creó FIRST AT HOME, una forma de mantener el desarrollo tecnológico a pesar de las adversidades. Esta forma de competir consisitía en que se mantendría el mismo reto del año anterior para que los equipos pudieran reutilizar sus robots pero se crearían 5 sub-retos, en algunos de ellos se debían completar circuitos y ganaría el robot que lo terminara en el menor tiempo posible; mientras que en otros se debían disparar pelotas desde diversas zonas y ganaría el robot que hiciera más puntos.</p><br>
+                        <p>Este robot fue muy especial porque a diferencia de los anteriores lo construí completamente solo, empecé con el proceso de diseño, luego la manufactura de piezas, construcción, cableado y programación, esto debido a que no podíamos reunirnos más miembros del equipo por la pandemia. Lo más interesante de este robot es que sus únicos dos materiales eran madera e impresión 3D y la herramienta usada para su fabricación solo fueron una impresora 3D y una sierra caladora.</p><br>
+                        <p>Este robot contaba con las siguientes funciones:</p>
+                        <ul>
+                            <li>Chasis diferencial de 6 llantas de tracción.</li>
+                            <li>Intake desplegable con un rodillo de cinta antiderrapante.</li>
+                            <li>Indexador de pelotas con bandas hechas con cinta antiderrapante.</li>
+                            <li>Pre-disparador para acelerar las pelotas y conseguir disparos consistentes.</li>
+                            <li>Disparador con llantas a altas revoluciones.</li>
+                            <li>Ángulo ajustable para orientar darle dirección a las pelotas.</li>
+                        </ul>
+                        <p>Debido a las características únicas de este robot realicé un <a href="../resources/FRC Flyer 2021.pdf" target="_blank">poster</a> sobre sus partes más importantes.</p>
                         <img src="../images/first-2021-3_profile.jpg">
                     </div>
                 </div>
