--- a/proyectos/first-2022.html
+++ b/proyectos/first-2022.html
@@ -19,7 +19,7 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/first-2022_profile.jpg">
-                        <p align="justify">Este es el último robot que construí para la competencia "FIRST Robotics Competition", al igual que en los años anteriores el proceso entero de diseño fue mio y me involucré como mentor de 3 generaciones de prepa para construirlo, cablearlo y programarlo. El robot tenía como objetivos recoger pelotas del suelo para dispararlas a una portería a más de 2 metros de altura y colgarse en una serie de tres pasamanos a diferentes alturas que iban desde los 1.5 hasta los 2.5 metros. Las características que hacían a este robot único eran:</p>
+                        <p>Este es el último robot que construí para la competencia "FIRST Robotics Competition", al igual que en los años anteriores el proceso entero de diseño fue mio y me involucré como mentor de 3 generaciones de prepa para construirlo, cablearlo y programarlo. El robot tenía como objetivos recoger pelotas del suelo para dispararlas a una portería a más de 2 metros de altura y colgarse en una serie de tres pasamanos a diferentes alturas que iban desde los 1.5 hasta los 2.5 metros. Las características que hacían a este robot único eran:</p>
                         <ul>
                             <li>Encoders para conocer la posición del robot en tiempo real.</li>
                             <li>Cámara para medir ángulo y distancia a la portería.</li>
@@ -28,7 +28,8 @@
                             <li>Secuencia de colgada automática.</li>
                             <li>Limitadores magnéticos de extensión de brazos.</li>
                         </ul>
-                        <p align="justify"><br>Este robot ganó el premio de inspiración a la ingeniería en la competencia regional del Tecnológico de Monterrey campus Monterrey y nos dio un pase al mundial para representar a México en Houston ante más de 400 equipos.<br>En el mundial quedamos en el lugar 60 de nuestra división.</p>
+                        <p>Este robot ganó el premio de inspiración a la ingeniería en la competencia regional del Tecnológico de Monterrey campus Monterrey y nos dio un pase al mundial para representar a México en Houston ante más de 400 equipos.</p><br>
+                        <p>En el mundial tuvimos un gran desempeño tratando de poner a México en alto y quedamos en el lugar 60 de nuestra división.</p>
                         <img src="../images/first-2022_profile.jpg">
                     </div>
                 </div>
