--- a/proyectos/first-nacional.html
+++ b/proyectos/first-nacional.html
@@ -18,9 +18,10 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/first-nacional_profile.jpg">
-                        <p align="justify"><a href="https://www.youtube.com/watch?v=VfE1Mfh0N9Y&list=PLpWHIyAPNvvxyWvrlZs0HlBJPx8Ttyin7" target="_blank">Curso</a></p>
+                        <p>Este proyecto nace por la necesidad de la Universidad Tecmilenio de capacitar a sus alumnos de preparatoria para que construyan robots para la competencia de robótica FRC con un mayor nivel de ingeniería al que están acostumbrados. Por ello, los directivos a nivel nacional de la universidad me contactaron para impartir un curso sobre mecánica orientada a la competencia, de esa forma hice una serie de 7 sesiones donde se tocaron gran variedad de temas que iban desde conceptos básicos y generales de física y materiales hasta actuadores y su aplicación en los diversos mecanismos más comunes de la competencia.</p><br>
+                        <p>El curso se llevó a cabo por medio de zoom dónde habían conectadas alrededor de 40 personas de los campus Puebla, Monterrey, Querétaro, Toluca y Mazatlán. Pero para preservar el contenido, las clases fueron grabadas y se pueden encontrar en la siguiente <a href="https://www.youtube.com/watch?v=VfE1Mfh0N9Y&list=PLpWHIyAPNvvxyWvrlZs0HlBJPx8Ttyin7" target="_blank">lista de reproducción</a>.</p>
                         <img src="../images/first-nacional_profile.jpg">
                     </div>
                 </div>
