--- a/proyectos/fundacion-plan.html
+++ b/proyectos/fundacion-plan.html
@@ -1,4 +1,5 @@
 <!--13/07/2022-->
+<!--Como parte de mi servicio social universitario, ingresé a "Fundación PLAN", una organización sin fines de lucro que busca ayudar a las comunidades a encontrar soluciones a sus problemáticas internas.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,10 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/fundacion-plan_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Como parte de mi servicio social formé parte de "Fundación PLAN", una organización sin fines de lucro que busca ayudar a las comunidades a encontrar soluciones a las problemáticas que se les presentan desde el enfoque más conveniente.</p><br>
+                        <p>Mi función dentro de la organización fue apoyar en la realización de las actividades; dentro de las actividades que realicé estuvieron la donación de ropa a personas de la calle, la reforestación de zonas verdes en Metepec, México, la realización de videos divertidos para niños en situaciones delicadas en hospitales y la escritura de cartas para personas de la tercera edad en asilos para celebrar fechas especiales como sus cumpleaños, día del abuelo, etc.</p>
                         <img src="../images/fundacion-plan_profile.jpg">
                     </div>
                 </div>
