--- a/proyectos/huerto-iot.html
+++ b/proyectos/huerto-iot.html
@@ -20,7 +20,9 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/huerto-iot_profile.jpg">
-                        <p align="justify"><a href="https://github.com/PaoloReyes/Huerto-IoT" target="_blank">Código</a></p>
+                        <p>Como parte de mi materia "Internet de las cosas" en el tercer semestre de la universidad tuve que realizar un proyecto de automatización de un huerto de 4 plantas distintas, la idea era monitorear la humedad y temperatura de cada planta usando un microcontrolador ESP32 y comunicar estos datos por MQTT (un protocolo de comunicación de datos por wifi) a una raspberry pi 4 la cuál crearía un servidor local que permitiría acceder desde cualquier dispositivo a una página donde se sintetizaría toda la información actual de las plantas y guardaría un historial de estados antiguos cada minuto usando una base de datos relacional MySQL, en adición al monitoreo una bomba de agua permitía regar de forma automática cada planta cuando su humedad bajaba de un cierto límite y un ventilador se activaba cuando la temperatura era muy alta.</p><br>
+                        <p>El proyecto fue realizado en un equipo de 5 personas, yo me encargué de la gestión del proyecto y la delegación de tareas a cada uno de los dos subequipos de dos personas "equipo circuitos" y "equipo software" ya que yo era el miembro con más experiencia y sabía que hacer en cada etapa del proyecto, de igual forma mi trabajo principal fue la realización de los programas en c++ para los microcontroladores ESP32.</p><br>
+                        <p>Los códigos de todo el proyecto pueden ser encontrados en mi <a href="https://github.com/PaoloReyes/Huerto-IoT" target="_blank">repositorio de github</a>.</p>
                         <img src="../images/huerto-iot_profile.jpg">
                     </div>
                 </div>
