--- a/proyectos/iron-man.html
+++ b/proyectos/iron-man.html
@@ -1,4 +1,5 @@
 <!--30/10/2021-->
+<!--Este proyecto nace de la idea de querer hacer un disfraz diferente para halloween y poner a prueba mis habilidades de impresión 3D, electrónica y programación.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,9 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/iron-man_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Este proyecto nace con la idea de hacer un disfraz algo más creativo para el halloween del 2021, con esto en mente la mejor idea que tuve fue crear un casco de iron man ya que en esas épocas la máscara estaba tomando popularidad, para construirla fue bastante sencillo porque el diseño ya existía en el internet y solo me hizo falta escalar el tamaño de las piezas para que se acomodara al tamaño de mi cabeza y comenzar a imprimir.</p><br>
+                        <p>Posterior a la impresión tuve que unir todas las piezas con pegamento instantáneo debido a que la máscara no se podía imprimir en una sola pieza, una vez pegado procedí con el paso más tedioso que fue lijar todas las superficies visibles para que desaparecieran las lineas naturales que deja una impresora 3D en todas sus partes, con esto listo procedí a pintar con aerosol rojo y dorado hasta que llegué al resultado que quería.</p><br>
+                        <p>En la parte de la electrónica el cerebro de la máscara era un arduino uno y el actuador que permitía su movimiento era un servomotor de 10 Kg, para el color de los ojos usé LED's RGB y como sensores de entrada para indicarle a la máscara cuando cambiar de color y cuando abrirse o cerrarse usé sensores táctiles capacitivos.</p>
                         <img src="../images/iron-man_profile.jpg">
                     </div>
                 </div>
