--- a/proyectos/robot-extraño.html
+++ b/proyectos/robot-extraño.html
@@ -18,9 +18,9 @@
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
-                        <img src="../images/strange-robot_profile.jpg">
+                        <img src="../images/robot-extraño_profile.jpg">
                         <p align="justify"></p>
-                        <img src="../images/strange-robot_profile.jpg">
+                        <img src="../images/robot-extraño_profile.jpg">
                     </div>
                 </div>
             </div>
@@ -30,34 +30,34 @@
                 <h1 class="subtitle">Evidencias</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/strange-robot_1.jpg">
+                        <img src="../images/robot-extraño_1.jpg">
                     </div>   
                     <div class="work">
-                        <img src="../images/strange-robot_2.jpg">
+                        <img src="../images/robot-extraño_2.jpg">
                     </div>   
                     <div class="work">
-                        <img src="../images/strange-robot_3.jpg">
+                        <img src="../images/robot-extraño_3.jpg">
                     </div>   
                     <div class="work">
-                        <img src="../images/strange-robot_4.jpg">
+                        <img src="../images/robot-extraño_4.jpg">
                     </div>  
                     <div class="work">
-                        <img src="../images/strange-robot_5.jpg">
+                        <img src="../images/robot-extraño_5.jpg">
                     </div> 
                     <div class="work">
-                        <img src="../images/strange-robot_6.jpg">
+                        <img src="../images/robot-extraño_6.jpg">
                     </div>  
                     <div class="work">
-                        <img src="../images/strange-robot_7.jpg">
+                        <img src="../images/robot-extraño_7.jpg">
                     </div> 
                     <div class="work">
                         <video autoplay muted loop playsinline>
-                            <source src="../images/strange-robot_8.mp4" type="video/mp4">
+                            <source src="../images/robot-extraño_8.mp4" type="video/mp4">
                         </video>
                     </div> 
                     <div class="work">
                         <video autoplay muted loop playsinline>
-                            <source src="../images/strange-robot_9.mp4" type="video/mp4">
+                            <source src="../images/robot-extraño_9.mp4" type="video/mp4">
                         </video>
                     </div> 
                 </div>    
