--- a/proyectos/first-2020-2.html
+++ b/proyectos/first-2020-2.html
@@ -1,4 +1,5 @@
 <!--08/01/2020-->
+<!--Este fue el primer robot de gran tamaño que diseñé, tuvo un buen desempeño a pesar de su mal centro de masa que lo obligaba a avanzar despacio y obtuvo uno de los únicos 4 pases al mundial en México.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,18 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/first-2020-2_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Este fue el primer robot que diseñé para la competencia de robots grandes (FRC) su propósito era recolectar y almacenar 5 pelotas de espuma de 6 pulgadas para después dispararlas dentro de una portería hexagonal a más de dos metros de altura, este robot me trajo muy buenas experiencias principalmente porque su elaboración se llevó en el hangar de la aerolinea "interjet" y tuve contacto con muchos ingenieros que me orientaron y enseñaron sobre manufactura y químicos.</p><br>
+                        <p>En adición a esta experiencia el desempeño del robot en la competencia fue bueno por lo que obtuvimos un premio a la excelencia en ingeniería que nos llevó al mundial y de igual forma yo obtuve el premio llamado "dean's list" que se le otorga solo a 1 estudiante dentro de todo el evento el cual se caracteriza por representar de mejor manera los valores de la competencia y busca difundir el conocimiento de STEM en su comunidad.</p><br>
+                        <p>Las características que hacen especial a este robot son:</p>
+                        <ul>
+                            <li>Chasis diferencial con llantas neumáticas hecho a medida para sobrepasar los obstáculos de la cancha.</li>
+                            <li>Intake desplegable con llantas mecanum para centrar la pelota.</li>
+                            <li>Serializador de pelotas en forma de banda para acumular las 5 pelotas.</li>
+                            <li>Disparador de 5 pelotas con un sistema de motores a altas revoluciones.</li>
+                            <li>Torreta para ajustar el ángulo del disparador con un sistema de visión artificial.</li>
+                            <li>Ángulo ajustable para cambiar la trayectoria parabólica del disparo.</li>
+                            <li>Elevador para colgar el robot con perfiles de aluminio, poleas y tres motores 775.</li>
+                        </ul>
                         <img src="../images/first-2020-2_profile.jpg">
                     </div>
                 </div>
