--- a/proyectos/kenia.html
+++ b/proyectos/kenia.html
@@ -1,4 +1,5 @@
 <!--28/06/2019-->
+<!--Kenia fue un proyecto de acción social que nace como premio por haber desarrollo el mejor proyecto social-tecnológico de latinoamérica en el 2019 (E-GoKart), la meta de este era apoyar con la construcción de escuelas y ayudar a los locales con objetos de necesidades básicas.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,17 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/kenia_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Este proyecto comenzó de manera diferente a los anteriores ya que llegó de manera espontánea y como continuación a un proyecto previo.</p><br> 
+                        <p>Gracias a que mi proyecto E-GoKart fue escogido como el mejor proyecto social-tecnológico de latinoamérica, la empresa "DOW químicos" me premió con un viaje todo pagado a Kenia para hacer labor social, durante este viaje hice una gran variedad de actividades, algunas de ellas fueron:</p>
+                        <ul>
+                            <li>La construcción de una cocina en una escuela primaria.</li>
+                            <li>La construcción de las bases de un salón de la primera universidad de la zona.</li>
+                            <li>El acarreo de 400 litros de agua desde el lago más cercano hasta la casa de los locales.</li>
+                            <li>La impartición de clases en una escuela local.</li>
+                        </ul>
+                        <p>Todas estas actividades me dejaron el corazón diferente al entender lo privilegiados que somos en otras partes del mundo por el simple hecho de poder acceder a servicios básicos y educación, desde entonces he estado orientado a seguir aprendiendo y desarrollando con la intención de mejorar la calidad de vida del resto de mi comunidad.</p><br>
+                        <p>Otra de las cosas que más me sirvieron de esta experiencia fue la convivencia diaria con los otros 27 ganadores de este premio a nivel mundial cuya procedencia era muy distinta, había personas de los Estados Unidos, Taiwan, Algeria y Egipto, y estos ganadores traían proyectos innovadores que compartían conmigo y ampliaban mi panorama ya que muchas veces estamos encerrados en las problemáticas locales e ignoramos problemas incluso más graves pero que son transparentes a nosotros.</p><br>
+                        <p>Con esta nueva perspectiva del mundo y esta red de comunicación con líderes globales comencé a ser la persona que soy hoy en día.</p>
                         <img src="../images/kenia_profile.jpg">
                     </div>
                 </div>
